k8s/overlays/local/patch-account-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
spec:
  template:
    spec:
      containers:
        - name: account-service
          image: banking/account-service:local
          imagePullPolicy: IfNotPresent
