k8s/overlays/local/patch-api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  template:
    spec:
      containers:
        - name: api-gateway
          image: banking/api-gateway:local
          imagePullPolicy: IfNotPresent
