k8s/overlays/local/patch-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    spec:
      containers:
        - name: frontend
          image: banking/frontend:local
          imagePullPolicy: IfNotPresent
