k8s/overlays/local/patch-transaction-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
spec:
  template:
    spec:
      containers:
        - name: transaction-service
          image: banking/transaction-service:local
          imagePullPolicy: IfNotPresent
